--- a/anmeldetool-server/pom.xml
+++ b/anmeldetool-server/pom.xml
@@ -17,6 +17,8 @@
 
 	<properties>
 		<java.version>11</java.version>
+		<org.mapstruct.version>1.4.2.Final</org.mapstruct.version>
+		<m2e.apt.activation>jdt_apt</m2e.apt.activation>
 	</properties>
 
 	<dependencies>
@@ -84,8 +86,12 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
-
+    	<dependency>
+        	<groupId>org.mapstruct</groupId>
+        	<artifactId>mapstruct</artifactId>
+        	<version>${org.mapstruct.version}</version>
+    	</dependency>	
+    </dependencies>
 	<build>
 		<plugins>
 			<plugin>
@@ -97,6 +103,22 @@
 					</jvmArguments>
 				</configuration>
 			</plugin>
+			        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            	<artifactId>maven-compiler-plugin</artifactId>
+            	<configuration>
+                	<source>${java.version}</source> <!-- depending on your project -->
+                	<target>${java.version}</target> <!-- depending on your project -->
+                	<annotationProcessorPaths>
+                    	<path>
+                        	<groupId>org.mapstruct</groupId>
+                        	<artifactId>mapstruct-processor</artifactId>
+                        	<version>${org.mapstruct.version}</version>
+                   	 </path>
+                    <!-- other annotation processors -->
+                	</annotationProcessorPaths>
+            	</configuration>
+        	</plugin>
 		</plugins>
 	</build>
 
