--- a/anmeldetool-server/src/main/resources/application.yml
+++ b/anmeldetool-server/src/main/resources/application.yml
@@ -5,7 +5,9 @@ server:
 spring:
   profiles:
     active: "local"
-
+  jpa:
+     show-sql: "true"
+     
 # this info may be accessed via actuator
 info:
   app:
@@ -19,6 +21,7 @@ logging:
     org.springframework.security: DEBUG
     org.flywaydb: INFO
     org.springframework.web.cors: DEBUG
+    org.hibernate.SQL: DEBUG
 
 management:
   endpoints:
