--- a/anmeldetool-server/pom.xml
+++ b/anmeldetool-server/pom.xml
@@ -18,6 +18,7 @@
 	<properties>
 		<java.version>11</java.version>
 		<org.mapstruct.version>1.4.2.Final</org.mapstruct.version>
+		<lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
 		<m2e.apt.activation>jdt_apt</m2e.apt.activation>
 	</properties>
 
@@ -115,6 +116,11 @@
                         	<artifactId>mapstruct-processor</artifactId>
                         	<version>${org.mapstruct.version}</version>
                    	 </path>
+                   	 <path>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok-mapstruct-binding</artifactId>
+                            <version>${lombok-mapstruct-binding.version}</version>
+                    </path>
                     <!-- other annotation processors -->
                 	</annotationProcessorPaths>
             	</configuration>
