--- a/anmeldetool-server/src/main/resources/application-local.yml
+++ b/anmeldetool-server/src/main/resources/application-local.yml
@@ -10,7 +10,7 @@ spring:
   datasource:
     driver-class-name: org.h2.Driver
     platform: h2
-    url: jdbc:h2:mem:test;MODE=Oracle
+    url: jdbc:h2:mem:test;MODE=PostgreSQL
     username: sa
     password:
   h2:
