--- a/anmeldetool-web/src/main/web/package.json
+++ b/anmeldetool-web/src/main/web/package.json
@@ -31,7 +31,8 @@
     "rxjs": "~6.6.0",
     "toastr": "^2.1.4",
     "tslib": "^2.0.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "moment": "^2.27.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^12.2.7",
