--- a/anmeldetool-server/pom.xml
+++ b/anmeldetool-server/pom.xml
@@ -4,7 +4,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>anmeldetool</artifactId>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 	<name>anmeldetool</name>
 	<description>Anmeldetool für ZTV GETU Wettkämpfe</description>
 
