--- a/anmeldetool-server/src/main/resources/application.yml
+++ b/anmeldetool-server/src/main/resources/application.yml
@@ -4,9 +4,15 @@ server:
     context-path: /
 spring:
   profiles:
-    active: "local"
+    active: "s"
   jpa:
-     show-sql: "true"
+     database-platform: org.hibernate.dialect.PostgreSQLDialect
+     show-sql: "false"
+     
+  datasource:
+    url: jdbc:postgresql://db:5432/getu-wettkaempfe
+    username: postgres
+    password: getu@ztv
      
 # this info may be accessed via actuator
 info:
