--- a/anmeldetool-web/src/main/web/package.json
+++ b/anmeldetool-web/src/main/web/package.json
@@ -27,12 +27,12 @@
     "bootstrap": "^4.6.1",
     "jquery": "^3.6.0",
     "jquery-min": "^0.0.2",
+    "moment": "^2.27.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "toastr": "^2.1.4",
     "tslib": "^2.0.0",
-    "zone.js": "~0.11.4",
-    "moment": "^2.27.0"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^12.2.7",
