--- a/anmeldetool-server/src/main/resources/application-eclipse.yml
+++ b/anmeldetool-server/src/main/resources/application-eclipse.yml
@@ -9,7 +9,7 @@ spring:
     locations: ["classpath:/db/migration"]
     clean-on-validation-error: true
     username: postgres
-    password: adrian2000
+    password: getu@ztv
   jpa:
      database-platform: org.hibernate.dialect.PostgreSQLDialect
      show-sql: "false"
@@ -17,7 +17,7 @@ spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/getuwettkaempfe
     username: postgres
-    password: adrian2000
+    password: getu@ztv
      
 # this info may be accessed via actuator
 info:
