--- a/anmeldetool-server/src/main/resources/application.yml
+++ b/anmeldetool-server/src/main/resources/application.yml
@@ -14,12 +14,19 @@ spring:
   jpa:
      database-platform: org.hibernate.dialect.PostgreSQLDialect
      show-sql: "false"
+     properties:
+        hibernate:
+           jdbc:
+              time_zone: "UTC"
      
   datasource:
     url: jdbc:postgresql://db:5432/getuwettkaempfe
     username: postgres
     password: getu@ztv
-     
+  jackson:
+     deserialization:
+        adjust-dates-to-context-time-zone: true
+     time-zone: "Europe/Zurich"   
 # this info may be accessed via actuator
 info:
   app:
@@ -30,10 +37,10 @@ info:
 logging:
   level:
     org.springframework.cloud: INFO
-    org.springframework.security: DEBUG
+    org.springframework.security: INFO
     org.flywaydb: INFO
-    org.springframework.web.cors: DEBUG
-    org.hibernate.SQL: DEBUG
+    org.springframework.web.cors: INFO
+    org.hibernate.SQL: INFO
 
 management:
   endpoints:
