--- a/anmeldetool-server/src/main/resources/application.yml
+++ b/anmeldetool-server/src/main/resources/application.yml
@@ -17,8 +17,8 @@ spring:
      properties:
         hibernate:
            jdbc:
-              time_zone: "UTC"
-     
+              time_zone: "GMT+1"
+              
   datasource:
     url: jdbc:postgresql://db:5432/getuwettkaempfe
     username: postgres
@@ -27,6 +27,7 @@ spring:
      deserialization:
         adjust-dates-to-context-time-zone: true
      time-zone: "Europe/Zurich"   
+     # time-zone: "UTC"
 # this info may be accessed via actuator
 info:
   app:
