--- a/anmeldetool-server/src/main/resources/application-eclipse.yml
+++ b/anmeldetool-server/src/main/resources/application-eclipse.yml
@@ -8,8 +8,8 @@ spring:
   flyway:
     locations: ["classpath:/db/migration"]
     clean-on-validation-error: true
-    username: postgres
-    password: getu@ztv
+    username: ${DB_USER}
+    password: ${DB_PASSWORD}
   jpa:
      database-platform: org.hibernate.dialect.PostgreSQLDialect
      show-sql: "false"
@@ -21,9 +21,9 @@ spring:
               
      
   datasource:
-    url: jdbc:postgresql://localhost:5432/getuwettkaempfe
-    username: postgres
-    password: getu@ztv
+    url: ${DB_URL}
+    username: ${DB_USER}
+    password: ${DB_PASSWORD}
   jackson:
      deserialization:
         adjust-dates-to-context-time-zone: true
