--- a/anmeldetool-web/src/main/web/package.json
+++ b/anmeldetool-web/src/main/web/package.json
@@ -28,7 +28,7 @@
     "jquery-min": "^0.0.2",
     "moment": "^2.27.0",
     "rxjs": "~6.6.0",
-    "toastr": "^2.1.4",
+    "ngx-toastr": "^14.2.1",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   },
