--- a/anmeldetool-server/src/main/resources/application-eclipse.yml
+++ b/anmeldetool-server/src/main/resources/application-eclipse.yml
@@ -7,12 +7,12 @@ spring:
     active: "eclipse"
   flyway:
     locations: ["classpath:/db/migration"]
-    clean-on-validation-error: true
+    clean-on-validation-error: false
     username: ${DB_USER}
     password: ${DB_PASSWORD}
   jpa:
      database-platform: org.hibernate.dialect.PostgreSQLDialect
-     show-sql: "false"
+     show-sql: "true"
      properties:
         hibernate:
            jdbc:
