--- a/anmeldetool-server/pom.xml
+++ b/anmeldetool-server/pom.xml
@@ -21,6 +21,7 @@
 		<lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
 		<m2e.apt.activation>jdt_apt</m2e.apt.activation>
 		<com.innoventsolutions.birt.version>4.8.0</com.innoventsolutions.birt.version>
+		<com.opencsv.version>5.5.2</com.opencsv.version>
 	</properties>
 
 	<dependencies>
@@ -92,6 +93,11 @@
 			<groupId>org.mapstruct</groupId>
 			<artifactId>mapstruct</artifactId>
 			<version>${org.mapstruct.version}</version>
+		</dependency>
+		<dependency>
+  			<groupId>com.opencsv</groupId>
+  			<artifactId>opencsv</artifactId>
+  			<version>${com.opencsv.version}</version>
 		</dependency>		
 		<!-- dependency>
     		<groupId>com.innoventsolutions.birt.runtime</groupId>
