--- a/anmeldetool-web/src/main/web/package.json
+++ b/anmeldetool-web/src/main/web/package.json
@@ -30,7 +30,8 @@
     "rxjs": "~6.6.0",
     "ngx-toastr": "^14.2.1",
     "tslib": "^2.0.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "file-saver": "^2.0.5"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^12.2.7",
@@ -51,6 +52,7 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.3.5"
+    "typescript": "~4.3.5",
+    "@types/file-saver": "^2.0.5"
   }
 }
