--- a/anmeldetool-server/src/main/resources/application-eclipse.yml
+++ b/anmeldetool-server/src/main/resources/application-eclipse.yml
@@ -43,6 +43,7 @@ logging:
     org.flywaydb: INFO
     org.springframework.web.cors: DEBUG
     org.hibernate.SQL: DEBUG
+    org.ztv.anmeldetool: DEBUG
 
 management:
   endpoints:
