--- a/anmeldetool-server/pom.xml
+++ b/anmeldetool-server/pom.xml
@@ -22,6 +22,7 @@
 		<m2e.apt.activation>jdt_apt</m2e.apt.activation>
 		<com.innoventsolutions.birt.version>4.8.0</com.innoventsolutions.birt.version>
 		<com.opencsv.version>5.5.2</com.opencsv.version>
+		<com.itextpdf.version>7.2.1</com.itextpdf.version>
 	</properties>
 
 	<dependencies>
@@ -95,15 +96,19 @@
 			<version>${org.mapstruct.version}</version>
 		</dependency>
 		<dependency>
-  			<groupId>com.opencsv</groupId>
-  			<artifactId>opencsv</artifactId>
-  			<version>${com.opencsv.version}</version>
-		</dependency>		
-		<!-- dependency>
-    		<groupId>com.innoventsolutions.birt.runtime</groupId>
-    		<artifactId>org.eclipse.birt.runtime_4.8.0-20180626</artifactId>
-    		<version>${com.innoventsolutions.birt.version}</version>
-		</dependency-->
+			<groupId>com.opencsv</groupId>
+			<artifactId>opencsv</artifactId>
+			<version>${com.opencsv.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.itextpdf</groupId>
+			<artifactId>itext7-core</artifactId>
+			<version>${com.itextpdf.version}</version>
+			<type>pom</type>
+		</dependency>
+		<!-- dependency> <groupId>com.innoventsolutions.birt.runtime</groupId> 
+			<artifactId>org.eclipse.birt.runtime_4.8.0-20180626</artifactId> <version>${com.innoventsolutions.birt.version}</version> 
+			</dependency -->
 	</dependencies>
 	<build>
 		<plugins>
