--- a/anmeldetool-web/src/main/web/angular.json
+++ b/anmeldetool-web/src/main/web/angular.json
@@ -84,6 +84,37 @@
                   "maximumError": "10kb"
                 }
               ]
+            },
+            "halle": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.halle.ts"
+                }
+              ],
+              "baseHref": "/",
+              "deployUrl": "/",
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "extractCss": true,
+              "namedChunks": false,
+              "aot": true,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true,
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "2mb",
+                  "maximumError": "5mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb",
+                  "maximumError": "10kb"
+                }
+              ]
             }
           },
           "defaultConfiguration": "production"
