--- a/anmeldetool-web/src/main/web/package.json
+++ b/anmeldetool-web/src/main/web/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve --configuration development --live-reload",
     "build": "ng build",
+    "build-halle": "ng build --configuration=halle",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
