--- a/anmeldetool-server/src/main/resources/application.yml
+++ b/anmeldetool-server/src/main/resources/application.yml
@@ -32,7 +32,7 @@ spring:
      host: "smtp.office365.com"
      port: 587
      username: "getu-wettkaempfe-tu@ztv.ch"
-     password: "Cav67716"
+     password: ""
      properties:
         mail:
            smtp:
