--- a/anmeldetool-server/src/main/resources/application.yml
+++ b/anmeldetool-server/src/main/resources/application.yml
@@ -31,7 +31,7 @@ spring:
   mail:
      host: "smtp.office365.com"
      port: 587
-     username: "getu-wettkaempfe-tu@ztv.ch"
+     username: ""
      password: ""
      properties:
         mail:
