--- a/anmeldetool-server/pom.xml
+++ b/anmeldetool-server/pom.xml
@@ -23,6 +23,7 @@
 		<com.innoventsolutions.birt.version>4.8.0</com.innoventsolutions.birt.version>
 		<com.opencsv.version>5.5.2</com.opencsv.version>
 		<com.itextpdf.version>7.2.1</com.itextpdf.version>
+		<org.thymeleaf.version>3.0.11.RELEASE</org.thymeleaf.version>
 	</properties>
 
 	<dependencies>
@@ -106,9 +107,16 @@
 			<version>${com.itextpdf.version}</version>
 			<type>pom</type>
 		</dependency>
-		<!-- dependency> <groupId>com.innoventsolutions.birt.runtime</groupId> 
-			<artifactId>org.eclipse.birt.runtime_4.8.0-20180626</artifactId> <version>${com.innoventsolutions.birt.version}</version> 
-			</dependency -->
+		<dependency>
+			<groupId>org.thymeleaf</groupId>
+			<artifactId>thymeleaf</artifactId>
+			<version>${org.thymeleaf.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.thymeleaf</groupId>
+			<artifactId>thymeleaf-spring5</artifactId>
+			<version>${org.thymeleaf.version}</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
