--- a/anmeldetool-server/src/main/resources/application-eclipse.yml
+++ b/anmeldetool-server/src/main/resources/application-eclipse.yml
@@ -12,7 +12,7 @@ spring:
     password: ${DB_PASSWORD}
   jpa:
      database-platform: org.hibernate.dialect.PostgreSQLDialect
-     show-sql: "false"
+     show-sql: "true"
      properties:
         hibernate:
            jdbc:
@@ -58,13 +58,13 @@ logging:
     
 scheduler:
    reminder:
-      cron: "0/10 * * * * *"
+      cron: "0/10 1 * * * *"
       daysbefore: 3
    closed:
-      cron: "0/10 * * * * *"
+      cron: "0/10 1 * * * *"
       daysafter: 1
    mutationen:
-      cron: "0/10 * * * * *"
+      cron: "0/10 1 * * * *"
       daysbefore: 3
       
 management:
