--- a/anmeldetool-web/src/main/web/package.json
+++ b/anmeldetool-web/src/main/web/package.json
@@ -8,7 +8,10 @@
     "build-halle": "ng build --configuration=halle",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "e2e:headless": "ng run at-app:cypress-run",
+    "cy:open": "cypress open",
+    "cy:run": "cypress run"
   },
   "private": true,
   "dependencies": {
@@ -25,24 +28,27 @@
     "@angular/router": "~12.2.7",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "bootstrap": "^4.6.1",
+    "file-saver": "^2.0.5",
     "jquery": "^3.6.0",
     "jquery-min": "^0.0.2",
     "moment": "^2.27.0",
-    "rxjs": "~6.6.0",
     "ngx-toastr": "^14.2.1",
+    "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.11.4",
-    "file-saver": "^2.0.5"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^12.2.7",
     "@angular/cli": "^12.2.7",
     "@angular/compiler-cli": "~12.2.7",
     "@angular/language-service": "~12.2.7",
+    "@cypress/schematic": "^2.0.0",
+    "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.2",
+    "cypress": "^10.0.3",
     "jasmine-core": "~3.8.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.3.0",
@@ -53,7 +59,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.3.5",
-    "@types/file-saver": "^2.0.5"
+    "typescript": "~4.3.5"
   }
 }
