--- a/anmeldetool-web/src/main/web/package.json
+++ b/anmeldetool-web/src/main/web/package.json
@@ -27,6 +27,9 @@
     "@angular/platform-browser-dynamic": "~12.2.7",
     "@angular/router": "~12.2.7",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
+    "@ag-grid-community/angular": "~27.3.0",
+    "@ag-grid-community/core": "~27.3.0",
+    "@ag-grid-community/client-side-row-model": "~27.3.0",
     "bootstrap": "^4.6.1",
     "file-saver": "^2.0.5",
     "jquery": "^3.6.0",
