Angular Version upgrade

--- a/anmeldetool-web/src/main/web/package.json
+++ b/anmeldetool-web/src/main/web/package.json
@@ -15,18 +15,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^12.2.7",
-    "@angular/cdk": "^12.2.7",
-    "@angular/common": "~12.2.7",
-    "@angular/compiler": "~12.2.7",
-    "@angular/core": "~12.2.7",
-    "@angular/forms": "~12.2.7",
-    "@angular/localize": "^12.2.7",
-    "@angular/material": "^12.2.7",
-    "@angular/platform-browser": "~12.2.7",
-    "@angular/platform-browser-dynamic": "~12.2.7",
-    "@angular/router": "~12.2.7",
-    "@ng-bootstrap/ng-bootstrap": "^10.0.0",
+    "@angular/animations": "14.0.5",
+    "@angular/cdk": "^13.3.9",
+    "@angular/common": "14.0.5",
+    "@angular/compiler": "14.0.5",
+    "@angular/core": "14.0.5",
+    "@angular/forms": "14.0.5",
+    "@angular/localize": "14.0.5",
+    "@angular/material": "^13.3.9",
+    "@angular/platform-browser": "14.0.5",
+    "@angular/platform-browser-dynamic": "14.0.5",
+    "@angular/router": "14.0.5",
+    "@ng-bootstrap/ng-bootstrap": "^12.1.2",
     "ag-grid-angular": "^28.0.0",
     "ag-grid-community": "^28.0.0",
     "bootstrap": "^4.6.1",
@@ -40,17 +40,25 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^12.2.7",
-    "@angular/cli": "^12.2.7",
-    "@angular/compiler-cli": "~12.2.7",
-    "@angular/language-service": "~12.2.7",
+    "@angular-devkit/build-angular": "^14.0.5",
+    "@angular-eslint/builder": "14.0.0",
+    "@angular-eslint/eslint-plugin": "14.0.0",
+    "@angular-eslint/eslint-plugin-template": "14.0.0",
+    "@angular-eslint/schematics": "14.0.0",
+    "@angular-eslint/template-parser": "14.0.0",
+    "@angular/cli": "^14.0.5",
+    "@angular/compiler-cli": "14.0.5",
+    "@angular/language-service": "^14.0.5",
     "@cypress/schematic": "^2.0.0",
     "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
+    "@typescript-eslint/eslint-plugin": "5.29.0",
+    "@typescript-eslint/parser": "5.29.0",
     "codelyzer": "^6.0.2",
     "cypress": "^10.0.3",
+    "eslint": "^8.18.0",
     "jasmine-core": "~3.8.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.3.0",
@@ -60,7 +68,6 @@
     "karma-jasmine-html-reporter": "~1.7.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~4.3.5"
+    "typescript": "~4.6.4"
   }
 }
