--- a/anmeldetool-web/src/main/web/package.json
+++ b/anmeldetool-web/src/main/web/package.json
@@ -26,7 +26,8 @@
     "@angular/platform-browser": "14.0.5",
     "@angular/platform-browser-dynamic": "14.0.5",
     "@angular/router": "14.0.5",
-    "@ng-bootstrap/ng-bootstrap": "^12.1.2",
+    "@ng-bootstrap/ng-bootstrap": "~13.0.0-beta.1",
+    "@ngxs/store": "^3.7.4",
     "ag-grid-angular": "^28.0.0",
     "ag-grid-community": "^28.0.0",
     "bootstrap": "^4.6.1",
@@ -50,6 +51,8 @@
     "@angular/compiler-cli": "14.0.5",
     "@angular/language-service": "^14.0.5",
     "@cypress/schematic": "^2.0.0",
+    "@ngxs/devtools-plugin": "^3.7.4",
+    "@ngxs/logger-plugin": "^3.7.4",
     "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
