--- a/anmeldetool-server/src/main/resources/application.yml
+++ b/anmeldetool-server/src/main/resources/application.yml
@@ -29,8 +29,8 @@ spring:
      time-zone: "Europe/Zurich"   
      # time-zone: "UTC"
   mail:
-     # host: "smtp.office365.com"
-     host: "mail.gmx.net"
+     host: "smtp.office365.com"
+     # host: "mail.gmx.net"
      port: 587
      templates:
         path: "mail-templates"
@@ -63,16 +63,17 @@ logging:
     org.flywaydb: INFO
     org.springframework.web.cors: INFO
     org.hibernate.SQL: INFO
-
+    org.ztv.anmeldetool.service: INFO
+# 0 */5 * * * ?
 scheduler:
    reminder:
-      cron: "0 0 1 * * *"
+      cron: "0 0 1 * * ?"
       daysbefore: 3
    closed:
-      cron: "0 0 2 * * *"
+      cron: "0 0 2 * * ?"
       daysafter: 1
    mutationen:
-      cron: "0 0 3 * * *"
+      cron: "0 0 3 * * ?"
       daysbefore: 3
 
       
