--- a/anmeldetool-web/pom.xml
+++ b/anmeldetool-web/pom.xml
@@ -22,10 +22,11 @@
 				<artifactId>frontend-maven-plugin</artifactId>
 				<version>1.12.0</version>
 				<configuration>
-					<!--nodeVersion>v19.6.0</nodeVersion>
-					<npmVersion>8.18.0</npmVersion-->
-					<nodeVersion>v16.13.1</nodeVersion>
-					<npmVersion>8.3.0</npmVersion>
+					<!--nodeVersion>v19.6.0</nodeVersion-->
+					<npmVersion>8.18.0</npmVersion>
+					<!--nodeVersion>v16.13.1</nodeVersion-->
+					<nodeVersion>v16.18.1</nodeVersion>
+					<!--npmVersion>8.3.0</npmVersion-->
 					<workingDirectory>src/main/web/</workingDirectory>
 				</configuration>
 				<executions>
