--- a/anmeldetool-web/src/main/web/package.json
+++ b/anmeldetool-web/src/main/web/package.json
@@ -31,6 +31,7 @@
     "@ngrx/router-store": "^14.3.3",
     "@ngrx/store": "^14.3.3",
     "@ngrx/store-devtools": "^14.3.3",
+    "@ngrx/entity": "^14.3.3",
     "ag-grid-angular": "^28.2.0",
     "ag-grid-community": "^28.2.0",
     "bootstrap": "^5.2.2",
