--- a/anmeldetool-web/src/main/web/package.json
+++ b/anmeldetool-web/src/main/web/package.json
@@ -3,13 +3,13 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --configuration development --live-reload",
-    "build": "ng build",
-    "build-halle": "ng build --configuration=halle",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e",
-    "e2e:headless": "ng run at-app:cypress-run",
+    "start": "nx serve -c development --live-reload",
+    "build": "nx build",
+    "build-halle": "nx build -c halle",
+    "test": "nx test",
+    "lint": "nx lint",
+    "e2e": "nx e2e",
+    "e2e:headless": "nx run at-app:cypress-run",
     "cy:open": "cypress open",
     "cy:run": "cypress run"
   },
@@ -46,6 +46,8 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.2.10",
+    "@angular-devkit/core": "^14.2.10",
+    "@angular-devkit/schematics": "^14.2.10",
     "@angular-eslint/builder": "^14.1.0",
     "@angular-eslint/eslint-plugin": "^14.1.0",
     "@angular-eslint/eslint-plugin-template": "^14.1.0",
@@ -57,6 +59,9 @@
     "@cypress/schematic": "^2.0.0",
     "@ngrx/eslint-plugin": "^14.3.3",
     "@ngrx/schematics": "^14.3.3",
+    "@nx/angular": "16.3.2",
+    "@nx/workspace": "16.3.2",
+    "@schematics/angular": "^14.2.10",
     "@types/d3": "^7.4.0",
     "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~4.0.0",
@@ -74,6 +79,8 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "nx": "16.3.2",
+    "nx-cloud": "latest",
     "protractor": "~7.0.0",
     "ts-node": "~10.9.0",
     "typescript": "~4.7.2"
