--- a/anmeldetool-server/src/main/resources/application.yml
+++ b/anmeldetool-server/src/main/resources/application.yml
@@ -34,10 +34,9 @@ spring:
      port: 587
      templates:
         path: "mail-templates"
-     username: "getu-wettkaempfe-tu@ztv.ch"
-     # username: "heinz.laetsch@gmx.ch"
-     password: win123ParatechAll
-     # password: "gmx32Paratech123"
+     username: "getu-wettkaempfe-tu1@ztv.ch"
+     # username: "heinz.laetsch1@gmx.ch"
+     password: 
      properties:
         mail:
            smtp:
