--- a/backup/getu_db_backup.config
+++ b/backup/getu_db_backup.config
@@ -7,7 +7,7 @@
 BACKUP_USER=
 
 # Optional hostname to adhere to pg_hba policies.  Will default to "localhost" if none specified.
-HOSTNAME=
+HOSTNAME=192.168.1.1
 
 # Optional username to connect to database as.  Will default to "postgres" if none specified.
 USERNAME=
