changes for SM Quali

--- a/anmeldetool-server/src/main/resources/application.yml
+++ b/anmeldetool-server/src/main/resources/application.yml
@@ -36,7 +36,7 @@ spring:
         path: "mail-templates"
      username: "getu-wettkaempfe-tu@ztv.ch"
      # username: "heinz.laetsch@gmx.ch"
-     password: win123Paratech
+     password: win123Paratech1
      # password: "gmx32Paratech"
      properties:
         mail:
