--- a/anmeldetool-web/src/main/web/package.json
+++ b/anmeldetool-web/src/main/web/package.json
@@ -4,8 +4,10 @@
   "scripts": {
     "ng": "ng",
     "start": "nx serve -c development --live-reload",
+    "start-nx": "npx nx run at-app:build:halle",
     "build": "nx build",
     "build-halle": "nx build -c halle",
+    "build-halle-nx": "nx run at-app:build:halle",
     "test": "nx test",
     "lint": "nx lint",
     "e2e": "nx e2e",
