--- a/anmeldetool-web/src/main/web/package.json
+++ b/anmeldetool-web/src/main/web/package.json
@@ -86,6 +86,7 @@
     "nx-cloud": "latest",
     "protractor": "~7.0.0",
     "ts-node": "~10.9.0",
-    "typescript": "~4.7.2"
+    "typescript": "~4.7.2",
+    "uuid": "7.0.3"
   }
 }
