--- a/anmeldetool-web/src/main/web/nx.json
+++ b/anmeldetool-web/src/main/web/nx.json
@@ -27,6 +27,12 @@
       "!{projectRoot}/**/*.spec.[jt]s",
       "!{projectRoot}/karma.conf.js"
     ],
+    "halle": [
+      "default",
+      "!{projectRoot}/tsconfig.spec.json",
+      "!{projectRoot}/**/*.spec.[jt]s",
+      "!{projectRoot}/karma.conf.js"
+    ],
     "development": [
       "default",
       "!{projectRoot}/tsconfig.spec.json",
