added Kategoriensponsoren, split Riegennamen

--- a/anmeldetool-server/src/test/resources/application-eclipse-dis.yml
+++ b/anmeldetool-server/src/test/resources/application-eclipse-dis.yml
@@ -18,7 +18,7 @@ spring:
               # time_zone: "Europe/Zurich"
               time_zone: "GMT+1"
   datasource:
-    url: jdbc:postgresql://localhost:5432/getuwettkaempfe
+    url: jdbc:postgresql://localhost:5432/getuwettkaempfe23
     username: postgres
     password: getu@ztv
   jackson:
