--- a/anmeldetool-web/src/main/web/package.json
+++ b/anmeldetool-web/src/main/web/package.json
@@ -8,8 +8,8 @@
     "startHalle": "nx serve -c halle --live-reload",
     "start-nx": "npx nx run at-app:build:halle",
     "build": "nx build",
-    "build-halle": "npx nx run at-app:build:halle",
-    "build-halle-nx": "npx nx run at-app:build:halle",
+    "build-halle": "npx nx run at-app:build:halle --skip-nx-cache",
+    "build-halle-nx": "npx nx run at-app:build:halle --skip-nx-cache",
     "test": "nx test",
     "lint": "nx lint",
     "e2e": "nx e2e",
