--- a/anmeldetool-web/src/main/web/project.json
+++ b/anmeldetool-web/src/main/web/project.json
@@ -132,6 +132,9 @@
         },
         "production": {
           "browserTarget": "at-app:build:production"
+        },
+          "halle": {
+          "browserTarget": "at-app:build:halle"
         }
       }
     },
