--- a/anmeldetool-server/src/main/resources/application-eclipse.yml
+++ b/anmeldetool-server/src/main/resources/application-eclipse.yml
@@ -50,10 +50,10 @@ logging:
     org.springframework.cloud: INFO
     org.springframework.security: INFO
     org.flywaydb: INFO
-    org.springframework.web.cors: DEBUG
-    org.hibernate.SQL: WARN
+    org.springframework.web.cors: INFO
+    org.hibernate.SQL: INFO
     org.hibernate.type: WARN
-    org.ztv.anmeldetool: DEBUG
+    org.ztv.anmeldetool: INFO
 # Sec Min Hours Day_of_Month Month Day_of_week Year    
 scheduler:
    reminder:
