--- a/anmeldetool-server/src/main/resources/application-local.yml
+++ b/anmeldetool-server/src/main/resources/application-local.yml
@@ -9,7 +9,7 @@ spring:
      show-sql: "false"
      
   datasource:
-    url: jdbc:postgresql://localhost:5432/getuwettkaempfe
+    url: jdbc:postgresql://localhost:5432/getuwettkaempfe2
     username: postgres
     password: adrian2000
 
