--- a/anmeldetool-server/src/test/resources/application-eclipse-dis.yml
+++ b/anmeldetool-server/src/test/resources/application-eclipse-dis.yml
@@ -61,8 +61,7 @@ management:
         allowed-methods: GET, POST, PUT
         allowed-headers: "*"
   server:
-    servlet:
-      context-path: /admin
+      base-path: /admin
   endpoint:
     beans:
       enabled: true
