--- a/anmeldetool-server/pom.xml
+++ b/anmeldetool-server/pom.xml
@@ -16,14 +16,14 @@
 	</parent>
 
 	<properties>
-		<java.version>11</java.version>
+		<java.version>21</java.version>
 		<org.mapstruct.version>1.5.0.Beta1</org.mapstruct.version>
 		<lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
 		<m2e.apt.activation>jdt_apt</m2e.apt.activation>
 		<com.innoventsolutions.birt.version>4.8.0</com.innoventsolutions.birt.version>
 		<com.opencsv.version>5.5.2</com.opencsv.version>
 		<com.itextpdf.version>7.2.1</com.itextpdf.version>
-		<org.thymeleaf.version>3.0.11.RELEASE</org.thymeleaf.version>
+		<org.thymeleaf.version>3.1.3.RELEASE</org.thymeleaf.version>
 	</properties>
 
 	<dependencies>
@@ -48,14 +48,14 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>io.springfox</groupId>
-			<artifactId>springfox-boot-starter</artifactId>
-			<version>3.0.0</version>
-		</dependency>
-		<dependency>
 			<groupId>org.flywaydb</groupId>
 			<artifactId>flyway-core</artifactId>
 		</dependency>
+		<dependency>
+    <groupId>org.flywaydb</groupId>
+    <artifactId>flyway-database-postgresql</artifactId>
+</dependency>
+
 		<dependency>
 			<groupId>org.springframework.session</groupId>
 			<artifactId>spring-session-core</artifactId>
@@ -79,23 +79,12 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<version>1.18.30</version>
-		</dependency>
-		<dependency>
-			<groupId>io.springfox</groupId>
-			<artifactId>springfox-swagger-ui</artifactId>
-			<version>3.0.0</version>
+			<!--version>1.18.38</version-->
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
-			<exclusions>
-				<exclusion>
-					<groupId>org.junit.vintage</groupId>
-					<artifactId>junit-vintage-engine</artifactId>
-				</exclusion>
-			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.security</groupId>
@@ -112,6 +101,10 @@
 			<artifactId>opencsv</artifactId>
 			<version>${com.opencsv.version}</version>
 		</dependency>
+    <dependency>
+      <groupId>jakarta.mail</groupId>
+      <artifactId>jakarta.mail-api</artifactId>
+    </dependency>
 		<dependency>
 			<groupId>com.itextpdf</groupId>
 			<artifactId>itext7-core</artifactId>
@@ -121,12 +114,12 @@
 		<dependency>
 			<groupId>org.thymeleaf</groupId>
 			<artifactId>thymeleaf</artifactId>
-			<version>${org.thymeleaf.version}</version>
+			<!--version>${org.thymeleaf.version}</version-->
 		</dependency>
 		<dependency>
 			<groupId>org.thymeleaf</groupId>
-			<artifactId>thymeleaf-spring5</artifactId>
-			<version>${org.thymeleaf.version}</version>
+			<artifactId>thymeleaf-spring6</artifactId>
+			<!--version>${org.thymeleaf.version}</version-->
 		</dependency>
 	</dependencies>
 	<build>
@@ -145,10 +138,6 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<source>${java.version}</source> <!-- depending on your
-					project -->
-					<target>${java.version}</target> <!-- depending on your
-					project -->
 					<annotationProcessorPaths>
 						<path>
 							<groupId>org.mapstruct</groupId>
@@ -165,11 +154,9 @@
 							<artifactId>lombok-mapstruct-binding</artifactId>
 							<version>${lombok-mapstruct-binding.version}</version>
 						</path>
-						<!-- other annotation processors -->
 					</annotationProcessorPaths>
 				</configuration>
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
