--- a/anmeldetool-server/src/main/resources/application-test.yml
+++ b/anmeldetool-server/src/main/resources/application-test.yml
@@ -9,13 +9,13 @@ spring:
     show-sql: false
   datasource:
     driver-class-name: org.h2.Driver
-    platform: h2
     url: jdbc:h2:mem:test;MODE=PostgreSQL
     username: sa
     password:
   h2:
     console:
       enabled: true
+  sql.init.platform: h2
 
 logging:
   level:
