--- a/anmeldetool-web/src/main/resources/application.properties
+++ b/anmeldetool-web/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-security.user.password=password
+spring.security.user.password=password
+springdoc.api-docs.path=/v3/api-docs
+springdoc.paths-to-match=/**
+springdoc.swagger-ui.path=/swagger-ui.html
