--- a/pom.xml
+++ b/pom.xml
@@ -8,13 +8,12 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.3.4.RELEASE</version>
+		<version>3.5.3</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 
 	<properties>
-		<java.version>11</java.version>
-		<m2e.apt.activation>jdt_apt</m2e.apt.activation>
+		<java.version>21</java.version>
 	</properties>
 	<scm>
 		<developerConnection>
@@ -26,8 +25,37 @@
 		<dependencies></dependencies>
 	</dependencyManagement>
 
+	<build>
+		<plugins>
+			<plugin>
+            	<groupId>org.openrewrite.maven</groupId>
+            	<artifactId>rewrite-maven-plugin</artifactId>
+            	<version>6.16.0</version>
+    			<configuration>
+        			<exportDatatables>true</exportDatatables>
+        			<activeRecipes>
+            			<recipe>org.openrewrite.java.spring.boot3.UpgradeSpringBoot_3_4</recipe>
+        			</activeRecipes>
+    			</configuration>
+    			<dependencies>
+        			<dependency>
+            			<groupId>org.openrewrite.recipe</groupId>
+            			<artifactId>rewrite-migrate-java</artifactId>
+            			<version>3.15.0</version>
+        			</dependency>
+        			<dependency>
+            			<groupId>org.openrewrite.recipe</groupId>
+            			<artifactId>rewrite-spring</artifactId>
+            			<version>6.12.0</version>
+        			</dependency>
+    			</dependencies>
+        	</plugin>
+		</plugins>
+	</build>
+
 	<modules>
 		<module>anmeldetool-web</module>
 		<module>anmeldetool-server</module>
-	</modules>
+        <module>TestSecurity</module>
+    </modules>
 </project>
